handle validator for form..

--- a/index.html
+++ b/index.html
@@ -245,45 +245,49 @@
     <!-- end footer socials -->
 
     <!-- overlay form login/register -->
-    <div class="modal ">
+    <div class="modal  ">
         <div class="modal-container">
-            <form class="login-form">
-                <h3>Login Form </h3>
-                <span class="form-close-btn"><i class="fas fa-times"></i></span>
-                <div class="field">
-                    <span class="fas fa-user">
-                    </span>
+            <form action="" method="POST" class="form" id="form-1">
+                <h3 class="heading">Thành viên đăng ký</h3>
+                <i class="fas fa-times form-close-btn"></i>
 
-                    <input type="text" required placeholder="Email or username">
-                </div>
-                <div class="field space">
-                    <span class="fas fa-lock">
-                    </span>
 
-                    <input type="password" required class="password password-field" placeholder="Password"
-                        name="password">
-                    <h4 class="show-btn show-password">SHOW</h4>
+                <div class="spacer"></div>
+
+                <div class="form-group">
+                    <label for="fullname" class="form-label">Tên đầy đủ</label>
+                    <input id="fullname" name="fullname" type="text" placeholder="VD: Nguyễn Vũ" class="form-control">
+                    <span class="form-message"></span>
                 </div>
-                <a href="" class="forgot">Forgot Password?</a>
-                <button type="submit" class="btn btn-primary">login</button>
-                <div class="login">Or login with</div>
-                <div class="link">
-                    <div class="facebook">
-                        <i class="fab fa-facebook-f"></i>
-                    </div>
-                    <div class="instagram">
-                        <i class="fab fa-instagram"></i>
-                    </div>
+
+                <div class="form-group">
+                    <label for="email" class="form-label">Email</label>
+                    <input id="email" name="email" type="text" placeholder="VD: email@domain.com" class="form-control">
+                    <span class="form-message"></span>
                 </div>
-                <div class="sign-up"> Don't have an account?
-                    <a href="/">Signup now</a>
+
+                <div class="form-group">
+                    <label for="password" class="form-label">Mật khẩu</label>
+                    <input id="password" name="password" type="password" placeholder="Nhập mật khẩu"
+                        class="form-control">
+                    <span class="form-message"></span>
                 </div>
+
+                <div class="form-group">
+                    <label for="password_confirmation" class="form-label">Nhập lại mật khẩu</label>
+                    <input id="password_confirmation" name="password_confirmation" placeholder="Nhập lại mật khẩu"
+                        type="password" class="form-control">
+                    <span class="form-message"></span>
+                </div>
+
+                <button class="form-submit">Đăng ký</button>
             </form>
         </div>
     </div>
 
     <script type="module" src="./header.js">
     </script>
+    <script src="./validator.js"></script>
     <script>
         const passField = document.querySelector('.password-field')
         const showBtn = document.querySelector('.show-password')
@@ -299,8 +303,49 @@
             }
         })
         console.log(passField)
-    </script>
 
+
+    </script>
+    <script>
+
+        document.addEventListener('DOMContentLoaded', function () {
+            // Mong muốn của chúng ta
+            Validator({
+                form: '#form-1',
+                formGroupSelector: '.form-group',
+                errorSelector: '.form-message',
+                rules: [
+                    Validator.isRequired('#fullname', 'Vui lòng nhập tên đầy đủ của bạn'),
+                    Validator.isEmail('#email'),
+                    Validator.minLength('#password', 6),
+                    Validator.isRequired('#password_confirmation'),
+                    Validator.isConfirmed('#password_confirmation', function () {
+                        return document.querySelector('#form-1 #password').value;
+                    }, 'Mật khẩu nhập lại không chính xác')
+                ],
+                onSubmit: function (data) {
+                    // Call API
+                    console.log(data);
+                }
+            });
+
+
+            Validator({
+                form: '#form-2',
+                formGroupSelector: '.form-group',
+                errorSelector: '.form-message',
+                rules: [
+                    Validator.isEmail('#email'),
+                    Validator.minLength('#password', 6),
+                ],
+                onSubmit: function (data) {
+                    // Call API
+                    console.log(data);
+                }
+            });
+        });
+
+    </script>
 
 </body>
 
