--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
             <div class="banner-container">
                 <div class="banner-text">
                     <h3 class="banner-title">Furniture for yor home</h3>
-                    <p class="banner-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eveniet, quis
+                    <p class="banner-desc hide-on-mobile-tablet ">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Quos eveniet, quis
                         nisi recusandae assumenda ea sequi obcaecati accusantium in provident dolore debitis autem neque
                         vel commodi atque voluptates incidunt aliquam delectus veritatis? Exercitationem, fugit sed!
                     </p>
-                    <div class="buttons">
+                    <div class="buttons hide-on-mobile-tablet ">
 
                         <a href="./products.html" class="btn">Shop now</a>
                         <a href="./about.html" class="btn white-btn"> more info</a>
@@ -122,7 +123,7 @@
                 </div>
                 <div class="featured-content">
                     <div class="row">
-                        <div class="col l-4">
+                        <div class="col l-4 l-4 m-6 c-12">
                             <div class="product-container">
                                 <div class="product-img">
                                     <img src="./images/feature1.jfif" alt="">
@@ -135,7 +136,7 @@
                             </div>
                         </div>
 
-                        <div class="col l-4">
+                        <div class="col l-4 l-4 m-6 c-12">
                             <div class="product-container">
                                 <div class="product-img">
                                     <img src="./images/feature2.jfif" alt="">
@@ -148,7 +149,7 @@
                             </div>
                         </div>
 
-                        <div class="col l-4">
+                        <div class="col l-4 l-4 m-6 c-12">
                             <div class="product-container">
                                 <div class="product-img">
                                     <img src="./images/feature3.jfif" alt="">
@@ -161,7 +162,7 @@
                             </div>
                         </div>
 
-                        <div class="col l-4">
+                        <div class="col l-4 l-4 m-6 c-12">
                             <div class="product-container">
                                 <div class="product-img">
                                     <img src="./images/feature4.jfif" alt="">
@@ -174,7 +175,7 @@
                             </div>
                         </div>
 
-                        <div class="col l-4">
+                        <div class="col l-4 l-4 m-6 c-12">
                             <div class="product-container">
                                 <div class="product-img">
                                     <img src="./images/feature5.jfif" alt="">
@@ -187,7 +188,7 @@
                             </div>
                         </div>
 
-                        <div class="col l-4">
+                        <div class="col l-4 l-4 m-6 c-12">
                             <div class="product-container">
                                 <div class="product-img">
                                     <img src="./images/feature6.jfif" alt="">
@@ -207,7 +208,7 @@
     <!-- end featured  -->
 
     <!-- footer banner -->
-    <div class="footer-banner">
+    <div class="footer-banner hide-on-mobile-tablet">
         <div class="img-container">
             <img src="./images/footer-banner.jpg" alt="" class="footer-img">
             <div class="overlay"></div>
