--- a/products.html
+++ b/products.html
@@ -99,7 +99,7 @@
         <div class="grid wide">
             <div class="product-container">
                 <div class="row">
-                    <div class="col l-3">
+                    <div class="col l-3 hide-on-mobile-tablet">
                         <div class="category">
                             <input type="text" class="search-input" placeholder="Search for item">
                             <div class="category-container">
@@ -139,7 +139,7 @@
                         </div>
 
                     </div>
-                    <div class="col l-9">
+                    <div class="col l-9 ">
                         <div class="fitler-content">
                             <p>23 Products Found</p>
                             <hr>
